--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TOP | UNICS Web</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 <header>
