--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>TOP | UNICS Web</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 <header>
-    PC CIRCLE
-    UNICS UNiversity of Ibaraki Computer Society
+    <a href="index.html"><img src="assets/images/logo.jpg" alt="Logo" class="full-width"></a>
 </header>
 <nav>
     <menu>
         <ul>
-            <li><a href="">TOP</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">ACTIVITY</a></li>
-            <li><a href="">EVENT</a></li>
-            <li><a href="">CONTACT</a></li>
-            <li><a href="">BLOG</a></li>
+            <li><a href="index.html">TOP</a></li>
+            <li><a href="about.html" class="under-construction">ABOUT</a></li>
+            <li><a href="activity.html" class="under-construction">ACTIVITY</a></li>
+            <li><a href="event.html" class="under-construction">EVENT</a></li>
+            <li><a href="contact.html" class="under-construction">CONTACT</a></li>
+            <li><a href="blog.html" class="under-construction">BLOG</a></li>
         </ul>
     </menu>
 </nav>
 <div class="main-container">
     <aside>
-        <a class="twitter-timeline" href="https://twitter.com/UNICS_Info?ref_src=twsrc%5Etfw">Tweets by UNICS_Info</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" data-width="440" data-height="600" data-theme="dark"
+           href="https://twitter.com/UNICS_Info?ref_src=twsrc%5Etfw">Tweets by UNICS_Info</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </aside>
     <main>
         <article>
@@ -47,5 +49,8 @@
         </article>
     </main>
 </div>
+<footer>
+    2020 UNICS
+</footer>
 </body>
 </html>
